crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_awaiting_commit_message.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: buf_to_string(&buf)
---










    ╭ Commit Message ──────────────────────────────────────────────────────╮
    │                                                                      │
    │ Enter commit message:                                                │
    │                                                                      │
    │ Implement my-feature; src/main.rs_                                   │
    │                                                                      │
    │                                                                      │
    │                                                                      │
    │                                                                      │
    ╰───────────────────────Enter commit │ Esc cancel──────────────────────╯
