crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_confirming_force_issue.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---










    ╭ Work Complete — Confirm ─────────────────────────────────────────────╮
    │                                                                      │
    │ Action: Archive Workspace                                            │
    │                                                                      │
    │ The linked issue is still open.                                      │
    │ Are you sure you want to proceed?                                    │
    │                                                                      │
    │                                                                      │
    │                                                                      │
    ╰──────────────────────Enter confirm │ Esc cancel──────────────────────╯
