crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_executing.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---











    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ ⠋ Pushing…                                                           │
    │                                                                      │
    │                                                                      │
    │                                                                      │
    ╰──────────────────────────────────────────────────────────────────────╯
