crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_reviewing_clean_ready.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---











    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ Clean — ready to archive                                             │
    │   branch: fuz/my-feature                                             │
    │ ──────────────────────────────────────────────────────────────────── │
    │ ❯ Archive Workspace  close and archive this workspace                │
    │                                                                      │
    ╰───────────────────↑↓ select │ Enter run │ Esc close──────────────────╯
