crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_reviewing_edits_no_link.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---










    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ Uncommitted edits                                                    │
    │   branch: fuz/my-feature  ↑1 ↓0  1 modified                          │
    │ ──────────────────────────────────────────────────────────────────── │
    │ ❯ Commit  stage and commit changes                                   │
    │   Push  push commits to remote                                       │
    │   Archive Workspace  close and archive this workspace                │
    │                                                                      │
    ╰───────────────────↑↓ select │ Enter run │ Esc close──────────────────╯
