crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_reviewing_issue_closed.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---










    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ Issue closed                                                         │
    │   branch: fuz/my-feature                                             │
    │   issue #42 (closed)  Add feature                                    │
    │ ──────────────────────────────────────────────────────────────────── │
    │ ❯ Archive Workspace  close and archive this workspace                │
    │                                                                      │
    ╰───────────────────↑↓ select │ Enter run │ Esc close──────────────────╯
