crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_reviewing_spec_complete.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---










    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ Spec complete                                                        │
    │   branch: fuz/my-feature                                             │
    │   spec: my-feature (linked)  5 of 5 tasks complete                   │
    │ ──────────────────────────────────────────────────────────────────── │
    │ ❯ Archive Spec  mark spec as done                                    │
    │   Archive Workspace  close and archive this workspace                │
    │                                                                      │
    ╰───────────────────↑↓ select │ Enter run │ Esc close──────────────────╯
