crates/conduit-ui/src/components/snapshots/conduit_ui__components__work_complete_dialog_snapshots__tests__snapshot_reviewing_spec_incomplete.snap
---
source: crates/conduit-ui/src/components/work_complete_dialog_snapshots.rs
expression: output
---










    ╭ Work Complete ───────────────────────────────────────────────────────╮
    │                                                                      │
    │ Spec in progress                                                     │
    │   branch: fuz/my-feature                                             │
    │   spec: my-feature  3/8 tasks                                        │
    │ ──────────────────────────────────────────────────────────────────── │
    │ ❯ Show Remaining Tasks  ask agent to list incomplete tasks           │
    │   Archive Workspace  close and archive this workspace                │
    │                                                                      │
    ╰───────────────────↑↓ select │ Enter run │ Esc close──────────────────╯
